tests/sumo/errors/routes/stops/waypoint_speed_invalid/errors.sumo
Error: Speed cannot be negative for stop on edge 'SC' in vehicle '0'.
